force-app/main/default/objects/Borrow__c/Borrow__c.object-meta.xml
<CustomObject>
    <description>This object contains the borrow details of a Book like the Book Id, User Id, Dates etc</description>
    <label>Borrow</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Borrow ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>