force-app/main/default/objects/Borrow__c/fields/Book_Copy__c.field-meta.xml
<CustomField>
    <fullName>Book_Copy__c</fullName>
    <description>This field is connected through MDR to Book Copy object and displays the copy of the book that is being borrowed</description>
    <label>Book Copy</label>
    <referenceTo>Book_Copy__c</referenceTo>
    <relationshipLabel>Borrows</relationshipLabel>
    <relationshipName>Borrows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>