force-app/main/default/objects/Borrow__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <description>This date field calculates the date on which the book has to be returned</description>
    <formula>CreatedDate + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>